fix viewport and scroll overflow hidden

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
 body {
     font-family: sans-serif;
+}
 
-    overflow: hidden;
+@viewport {
+	zoom: 1.0;
+	width: extend-to-zoom;
+}
+@-ms-viewport {
+    width: extend-to-zoom;
+    zoom: 1.0;
 }
 
 #background {
